--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,21 @@
     box-sizing: border-box;
 }
 
+.clear {
+    clear: both;
+}
+
+.text-white {
+    color: #fff !important;
+}
+
 html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #main {}
+
+/* Header section */
 
 #header {
     height: 46px;
@@ -97,7 +107,7 @@ html {
     line-height: 38px;
 }
 
-
+/* Slider section */
 
 #slider {
     position: relative;
@@ -124,6 +134,8 @@ html {
     margin-top: 25px;
 }
 
+/* Content section */
+
 #content {}
 
 #content .content-section {
@@ -137,18 +149,52 @@ html {
     font-size: 30px;
     font-weight: 500;
     letter-spacing: 4px;
+
 }
 
 #content .section-sub-heading {
     font-size: 15px;
     margin-top: 25px;
+    font-style: italic;
+    opacity: 0.6;
 }
 
 #content .about-text {
     margin-top: 25px;
+    font-size: 15px;
+    text-align: justify;
+    line-height: 1.4;
 }
 
 #content .section-heading,
 #content .section-sub-heading {
     text-align: center;
 }
+
+#content .members-list {
+    margin-top: 48px;
+}
+
+#content .member-item {
+    float: left;
+    width: 33.33333%;
+    text-align: center;
+}
+
+#content .member-name {
+    font-size: 15px;
+}
+
+#content .member-img {
+    width: 154px;
+    margin-top: 15px;
+    border-radius: 4px;
+}
+
+/* Tour section */
+.tour-section {
+    background-color: #000;
+}
+
+/* footer section */
+footer {}
